-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 1.4.2
-
Component/s: client-libs
-
b48
-
x86
-
windows_2000
-
Verified
FULL PRODUCT VERSION :
java version "1.4.2_05"
Java(TM) 2 Runtime Environment, Standard Edition (build 1.4.2_05-b04)
Java HotSpot(TM) Client VM (build 1.4.2_05-b04, mixed mode)
ADDITIONAL OS VERSION INFORMATION :
Windows 2000 SP4 Terminal Server
EXTRA RELEVANT SYSTEM CONFIGURATION :
RDP Session with 256 Colors and 1280x1024
A DESCRIPTION OF THE PROBLEM :
If i take a screenshot by pressing "print" or "alt-print" within an termina server session the captured image is shifted (to the left ?)
STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
Use the following code snipplet to save the clipboard as png.
Press "print" within an terminal-session and execute this class.
EXPECTED VERSUS ACTUAL BEHAVIOR :
EXPECTED -
Nice looking screenshot
ACTUAL -
The image is shifted
REPRODUCIBILITY :
This bug can be reproduced always.
---------- BEGIN SOURCE ----------
import javax.imageio.ImageIO;
import java.awt.Toolkit;
import java.awt.datatransfer.DataFlavor;
import java.awt.image.BufferedImage;
import java.io.File;
public class ClipTest
{
public static void main(String[] args) throws Exception
{
BufferedImage bi = (BufferedImage) Toolkit.getDefaultToolkit()
.getSystemClipboard()
.getContents(ClipTest.class)
.getTransferData(DataFlavor.imageFlavor);
ImageIO.write(bi, "PNG", new File("clptst.png"));
}
}
---------- END SOURCE ----------
java version "1.4.2_05"
Java(TM) 2 Runtime Environment, Standard Edition (build 1.4.2_05-b04)
Java HotSpot(TM) Client VM (build 1.4.2_05-b04, mixed mode)
ADDITIONAL OS VERSION INFORMATION :
Windows 2000 SP4 Terminal Server
EXTRA RELEVANT SYSTEM CONFIGURATION :
RDP Session with 256 Colors and 1280x1024
A DESCRIPTION OF THE PROBLEM :
If i take a screenshot by pressing "print" or "alt-print" within an termina server session the captured image is shifted (to the left ?)
STEPS TO FOLLOW TO REPRODUCE THE PROBLEM :
Use the following code snipplet to save the clipboard as png.
Press "print" within an terminal-session and execute this class.
EXPECTED VERSUS ACTUAL BEHAVIOR :
EXPECTED -
Nice looking screenshot
ACTUAL -
The image is shifted
REPRODUCIBILITY :
This bug can be reproduced always.
---------- BEGIN SOURCE ----------
import javax.imageio.ImageIO;
import java.awt.Toolkit;
import java.awt.datatransfer.DataFlavor;
import java.awt.image.BufferedImage;
import java.io.File;
public class ClipTest
{
public static void main(String[] args) throws Exception
{
BufferedImage bi = (BufferedImage) Toolkit.getDefaultToolkit()
.getSystemClipboard()
.getContents(ClipTest.class)
.getTransferData(DataFlavor.imageFlavor);
ImageIO.write(bi, "PNG", new File("clptst.png"));
}
}
---------- END SOURCE ----------