6551075: screenshot image taken through clipboard on W2K terminal server is shifted

Reviewed-by: dav, uta